user delete completed

--- a/src/app/users/lister/lister.component.html
+++ b/src/app/users/lister/lister.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="actions">
       <button (click)="onEdit(user)" class="main">Edit</button>
-      <button class="danger">Delete</button>
+      <button (click)="deleteAction(user)" class="danger">Delete</button>
     </div>
   </div>
 </div>
