simple logout redirect added

--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="menu">
     <a class="menu-item selected" [routerLink]="['/users']">Users</a>
-    <a class="menu-item" (click)="onLogout()">Logout</a>
+    <a class="menu-item" [routerLink]="['/login']">Logout</a>
   </div>
 </div>
 <div class="content">
